feat: SPICE download and metakernel generator command  (#225)
* chore(deps) : Update imap data access
* feat: add sdc spice download client
- add wiremock tests
- add sample sclk file
* feat: Add basic SDC SPICE downloader flow
* feat: spice downloads, and stored in datastore
* feat: Save SPICE metadata to database as JSON
* test: Download SPICE has e2e tests
* fix: spice download as a CLI app
* feat: SPICE gets uploaded to sharepoint
* feat: add SPICE metakernel generator and refactor to DatastoreFileManager.CreateByMode

- Add generate_spice_metakernel CLI command to build metakernels from database
- Refactor DatastoreFileManager.CreateByMode to replace appUtils.getManagerByMode
- Fix SPICE file version detection in SPICEPathHandler.from_filename
- Fix typo in metakernel filename (imag -> imap)
- Add comprehensive tests for MetaKernel class and generate_spice_metakernel
- Fix update_last_checked_timestamp method name in flow files
- Update test assertions to match actual log message format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,5 @@
             "username": "postgres"
         }
     ],
-    "python-envs.pythonProjects": []
+    "python-envs.pythonProjects": [],
 }
