--- a/defaults.env
+++ b/defaults.env
@@ -1,10 +1,24 @@
-PREFECT_API_URL=http://prefect:4200/api
+
+ENV_NAME=dev
+
+IMAP_DATA_FOLDER=tests/datastore
+IMAP_WEBSITE_HOST=localhost
+SQLALCHEMY_URL=postgresql+psycopg://postgres:postgres@host.docker.internal:5432/imap
+DEV_SERVER=127.0.0.1
+DEV_SERVER_PORT=4200
+PREFECT_API_URL=http://127.0.0.1:4200/api
+
 IMAP_IMAGE_TAG=local-dev
 IMAP_VOLUMES=/mnt/imap-data/dev:/data
 IMAP_USERNAME=imap_pipeline
 IMAP_USERID=5679
-SQLALCHEMY_URL=postgresql+psycopg://postgres:postgres@host.docker.internal:5432/imap
-IMAP_WEBPODA_TOKEN=
-IMAP_API_KEY=
+
+# PUT THESE IN A ".env" file to override locally debugging
+# IMAP_WEBPODA_TOKEN=
+# IMAP_API_KEY=
+
+PREFECT_LOGGING_ROOT_LEVEL=DEBUG
 PREFECT_LOGGING_LEVEL=DEBUG
-PREFECT_LOGGING_EXTRA_LOGGERS=imap_mag
+PREFECT_SERVER_LOGGING_LEVEL=DEBUG
+PREFECT_INTERNAL_LOGGING_LEVEL=DEBUG
+PREFECT_LOGGING_EXTRA_LOGGERS="imap_mag,imap_db,mag_toolkit,prefect_server,imap_data_access,ialirt_data_access"
