--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 requires-python = ">=3.11"
 name = "imap-mag"
-version = "4.9.1"
+version = "4.10.0"
 
 [tool.poetry]
 name = "imap-mag"
@@ -40,6 +40,7 @@ crump = "0.5.1"
 prefect-managedfiletransfer = "^0.4.1"
 ialirt-data-access = "^0.5.0"
 apprise = ">=1.9.5"
+spiceypy = "^8.0.0"
 prefect-sqlalchemy = "^0.5.3"
 
 [tool.poetry.group.dev.dependencies]
@@ -80,6 +81,16 @@ env = [
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    "tests/datastore",
+    "docs",
+    "output",
+    "data",
+    "htmlcov",
+]
 
 [tool.ruff.lint]
 select = [
